@@ -1,3 +1,7 @@
+  10 Dec 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  likwid-3.0.0.ebuild:
+  sys-apps/likwid: honor LDFLAGS & set SONAMEs
+
   09 Dec 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
   likwid-3.0.0.ebuild, metadata.xml:
   sys-apps/likwid: added suid option
